# Money_balance_Django

./: README.md
money_app/: pyproject.toml
money_app/app/app/: settings.py  urls.py
money_app/app/money_balance/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
money_app/app/money_balance/migrations/: 0001_initial.py
money_app/app/money_balance/static/money_balance/: style.css
money_app/app/money_balance/templates/money_balance/: add_category_costs.html  add_category_income.html  add_costs.html  add_income.html  base.html  index.html  report.html  report_sum.html
